Deprecated methods fixed